--- a/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.NetStandard20.wxs
+++ b/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.NetStandard20.wxs
@@ -41,6 +41,11 @@
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
+        <File Id="netstandard20_System.Buffers.dll"
+              Source="$(var.TracerHomeDirectory)\netstandard2.0\System.Buffers.dll"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
         <File Id="netstandard20_System.Collections.Immutable.dll"
               Source="$(var.TracerHomeDirectory)\netstandard2.0\System.Collections.Immutable.dll"
               KeyPath="yes" Checksum="yes"/>
@@ -53,6 +58,16 @@
       <Component Win64="$(var.Win64)">
         <File Id="netstandard20_System.Diagnostics.DiagnosticSource.dll"
               Source="$(var.TracerHomeDirectory)\netstandard2.0\System.Diagnostics.DiagnosticSource.dll"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <File Id="netstandard20_System.Memory.dll"
+              Source="$(var.TracerHomeDirectory)\netstandard2.0\System.Memory.dll"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <File Id="netstandard20_System.Numerics.Vectors.dll"
+              Source="$(var.TracerHomeDirectory)\netstandard2.0\System.Numerics.Vectors.dll"
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
