--- a/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.NetStandard20.wxs
+++ b/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.NetStandard20.wxs
@@ -6,11 +6,6 @@
   <Fragment>
     <ComponentGroup Id="Files.Managed.NetStandard20" Directory="netstandard2.0">
       <Component Win64="$(var.Win64)">
-        <File Id="netstandard20_Datadog.Trace.Build.dll"
-              Source="$(var.TracerHomeDirectory)\netstandard2.0\Datadog.Trace.Build.dll"
-              KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Win64="$(var.Win64)">
         <File Id="netstandard20_Datadog.Trace.ClrProfiler.Managed.Core.dll"
               Source="$(var.TracerHomeDirectory)\netstandard2.0\Datadog.Trace.ClrProfiler.Managed.Core.dll"
               KeyPath="yes" Checksum="yes"/>
@@ -23,6 +18,11 @@
       <Component Win64="$(var.Win64)">
         <File Id="netstandard20_Datadog.Trace.dll"
               Source="$(var.TracerHomeDirectory)\netstandard2.0\Datadog.Trace.dll"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <File Id="netstandard20_Datadog.Trace.MSBuild.dll"
+              Source="$(var.TracerHomeDirectory)\netstandard2.0\Datadog.Trace.MSBuild.dll"
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
