--- a/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.Net45.wxs
+++ b/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.Net45.wxs
@@ -11,11 +11,6 @@
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
-        <File Id="net45_Datadog.Trace.Build.dll"
-              Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.Build.dll"
-              KeyPath="yes" Checksum="yes"/>
-      </Component>
-      <Component Win64="$(var.Win64)">
         <File Id="net45_Datadog.Trace.ClrProfiler.Managed.Core.dll"
               Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.ClrProfiler.Managed.Core.dll"
               KeyPath="yes" Checksum="yes"/>
@@ -31,8 +26,8 @@
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
-        <File Id="net45_Microsoft.Build.Framework.dll"
-              Source="$(var.TracerHomeDirectory)\net45\Microsoft.Build.Framework.dll"
+        <File Id="net45_Datadog.Trace.MSBuild.dll"
+              Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.MSBuild.dll"
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
