msbuild logger integration (#811)
* MsBuild integration by using a logger implementation.
* Writes the msbuild errors and warning as a json string to be collected with the CI instrumentation.

--- a/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.Net461.wxs
+++ b/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.Net461.wxs
@@ -26,6 +26,11 @@
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
+        <File Id="net461_Datadog.Trace.MSBuild.dll"
+              Source="$(var.TracerHomeDirectory)\net461\Datadog.Trace.MSBuild.dll"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
         <File Id="net461_Newtonsoft.Json.dll"
               Source="$(var.TracerHomeDirectory)\net461\Newtonsoft.Json.dll"
               KeyPath="yes" Checksum="yes"/>
