--- a/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.Net45.wxs
+++ b/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.Net45.wxs
@@ -26,6 +26,11 @@
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
+        <File Id="net45_Datadog.Trace.MSBuild.dll"
+              Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.MSBuild.dll"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
         <File Id="net45_Newtonsoft.Json.dll"
               Source="$(var.TracerHomeDirectory)\net45\Newtonsoft.Json.dll"
               KeyPath="yes" Checksum="yes"/>
