--- a/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Product.wxs
+++ b/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Product.wxs
@@ -39,6 +39,7 @@
       <ComponentGroupRef Id="Files.Managed.Net45"/>
       <ComponentGroupRef Id="Files.Managed.Net461"/>
       <ComponentGroupRef Id="Files.Managed.NetStandard20"/>
+      <ComponentGroupRef Id="Files.Managed.Netcoreapp31"/>
       <ComponentGroupRef Id="EmptyFolders"/>
       <ComponentGroupRef Id="Registry"/>
       <ComponentGroupRef Id="EnvironmentVariables.Machine"/>
@@ -94,6 +95,9 @@
               <Directory Id="netstandard2.0" Name="netstandard2.0">
                 <!-- ".\netstandard2.0" -->
               </Directory>
+            <Directory Id="netcoreapp3.1" Name="netcoreapp3.1">
+                <!-- ".\netcoreapp3.1" -->
+            </Directory>
               <Directory Id="net45.GAC" Name="net45.GAC">
                 <!-- Ignored as all of its components will be installed in the GAC -->
               </Directory>
