--- a/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.Netcoreapp31.wxs
+++ b/deploy/Datadog.Trace.ClrProfiler.WindowsInstaller/Files.Managed.Netcoreapp31.wxs
@@ -21,6 +21,11 @@
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
+        <File Id="netcoreapp31_Datadog.Trace.DuckTyping.dll"
+              Source="$(var.TracerHomeDirectory)\netcoreapp3.1\Datadog.Trace.DuckTyping.dll"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
         <File Id="netcoreapp31_Datadog.Trace.MSBuild.dll"
               Source="$(var.TracerHomeDirectory)\netcoreapp3.1\Datadog.Trace.MSBuild.dll"
               KeyPath="yes" Checksum="yes"/>
@@ -28,6 +33,11 @@
       <Component Win64="$(var.Win64)">
         <File Id="netcoreapp31_Sigil.dll"
               Source="$(var.TracerHomeDirectory)\netcoreapp3.1\Sigil.dll"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <File Id="netcoreapp31_lzma.dll"
+              Source="$(var.TracerHomeDirectory)\netcoreapp3.1\lzma.dll"
               KeyPath="yes" Checksum="yes"/>
       </Component>
     </ComponentGroup>
