--- a/samples/Datadog.Logging.Demo/Datadog.Logging.Demo/public/Log.tt
+++ b/samples/Datadog.Logging.Demo/Datadog.Logging.Demo/public/Log.tt
@@ -4,10 +4,5 @@
 // This .CS file is automatically generated. If you modify its contents, your changes will be overwritten.
 // Modify the respective T4 templates if changes are required.
 
-<#
-    Tuple<string, string>[] NamespacesAndMonikersOfLogsToCompose = new Tuple<string, string>[]
-        {
-            Tuple.Create("Datadog.Logging.Demo", "LoggingDemo")
-        };
-#>
-<#@ include file="..\..\..\..\Shared-Src\Datadog.Logging.Composition\internal\LogComposer.tt.cs" #>
+<# string LogNamespaceName = "Datadog.Logging.Demo"; #>
+<#@ include file="$(SharedSrcBaseDir)\Datadog.Logging\public\Log.tt.cs" #>
