--- a/src/Shared-Libs/ManagedLoader/Datadog.AutoInstrumentation.ManagedLoader/internal/Log.tt
+++ b/src/Shared-Libs/ManagedLoader/Datadog.AutoInstrumentation.ManagedLoader/internal/Log.tt
@@ -6,4 +6,4 @@
 
 <# string LogNamespaceName = "Datadog.AutoInstrumentation.ManagedLoader"; #>
 <# string LogClassAccessibilityLevel = "internal"; #>
-<#@ include file="..\..\..\..\Shared-Src\Datadog.Logging\public\Log.tt.cs" #>
+<#@ include file="$(SharedSrcBaseDir)\Datadog.Logging\public\Log.tt.cs" #>
