--- a/src/Shared-Libs/ManagedLoader/Datadog.AutoInstrumentation.ManagedLoader/internal/LogComposer.tt
+++ b/src/Shared-Libs/ManagedLoader/Datadog.AutoInstrumentation.ManagedLoader/internal/LogComposer.tt
@@ -10,4 +10,4 @@
             Tuple.Create("Datadog.AutoInstrumentation.ManagedLoader", "ManagedLoader")
         };
 #>
-<#@ include file="..\..\..\..\Shared-Src\Datadog.Logging.Composition\internal\LogComposer.tt.cs" #>
+<#@ include file="$(SharedSrcBaseDir)\Datadog.Logging.Composition\internal\LogComposer.tt.cs" #>
