--- a/samples/Datadog.Logging.Demo/EmitterAndComposerApp/Datadog.Logging.Demo.EmitterAndComposerApp/public/Log.tt
+++ b/samples/Datadog.Logging.Demo/EmitterAndComposerApp/Datadog.Logging.Demo.EmitterAndComposerApp/public/Log.tt
@@ -4,5 +4,5 @@
 // This .CS file is automatically generated. If you modify its contents, your changes will be overwritten.
 // Modify the respective T4 templates if changes are required.
 
-<# string LogNamespaceName = "Datadog.Logging.Demo"; #>
+<# string LogNamespaceName = "Datadog.Logging.Demo.EmitterAndComposerApp"; #>
 <#@ include file="$(SharedSrcBaseDir)\Datadog.Logging\public\Log.tt.cs" #>
