--- a/samples/Datadog.DynamicDiagnosticSourceBindings.Demo/Simple.NetCore31/Demo.Slimple.NetCore31/public/Log.tt
+++ b/samples/Datadog.DynamicDiagnosticSourceBindings.Demo/Simple.NetCore31/Demo.Slimple.NetCore31/public/Log.tt
@@ -4,5 +4,5 @@
 // This .CS file is automatically generated. If you modify its contents, your changes will be overwritten.
 // Modify the respective T4 templates if changes are required.
 
-<# string LogNamespaceName = "Datadog.DynamicDiagnosticSourceBindings"; #>
+<# string LogNamespaceName = "Demo.Slimple.NetCore31"; #>
 <#@ include file="$(SharedSrcBaseDir)\Shared-Src\Datadog.Logging\public\Log.tt.cs" #>
