--- a/src/WindowsInstaller/Files.Managed.Net45.GAC.wxs
+++ b/src/WindowsInstaller/Files.Managed.Net45.GAC.wxs
@@ -13,14 +13,32 @@
       </Component>
       <Component Win64="$(var.Win64)">
         <Condition>NOT WIX_IS_NETFRAMEWORK_461_OR_LATER_INSTALLED</Condition>
+        <File Id="net45_GAC_Datadog.Trace.AspNet.pdb"
+              Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.AspNet.pdb"
+              KeyPath="yes" Checksum="yes" Assembly=".net"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <Condition>NOT WIX_IS_NETFRAMEWORK_461_OR_LATER_INSTALLED</Condition>
         <File Id="net45_GAC_Datadog.Trace.ClrProfiler.Managed.Core.dll"
               Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.ClrProfiler.Managed.Core.dll"
               KeyPath="yes" Checksum="yes" Assembly=".net"/>
       </Component>
       <Component Win64="$(var.Win64)">
         <Condition>NOT WIX_IS_NETFRAMEWORK_461_OR_LATER_INSTALLED</Condition>
+        <File Id="net45_GAC_Datadog.Trace.ClrProfiler.Managed.Core.pdb"
+              Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.ClrProfiler.Managed.Core.pdb"
+              KeyPath="yes" Checksum="yes" Assembly=".net"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <Condition>NOT WIX_IS_NETFRAMEWORK_461_OR_LATER_INSTALLED</Condition>
         <File Id="net45_GAC_Datadog.Trace.ClrProfiler.Managed.dll"
               Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.ClrProfiler.Managed.dll"
+              KeyPath="yes" Checksum="yes" Assembly=".net"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <Condition>NOT WIX_IS_NETFRAMEWORK_461_OR_LATER_INSTALLED</Condition>
+        <File Id="net45_GAC_Datadog.Trace.ClrProfiler.Managed.pdb"
+              Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.ClrProfiler.Managed.pdb"
               KeyPath="yes" Checksum="yes" Assembly=".net"/>
       </Component>
       <Component Win64="$(var.Win64)">
@@ -33,6 +51,18 @@
         <Condition>NOT WIX_IS_NETFRAMEWORK_461_OR_LATER_INSTALLED</Condition>
         <File Id="net45_GAC_Datadog.Trace.MSBuild.dll"
               Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.MSBuild.dll"
+              KeyPath="yes" Checksum="yes" Assembly=".net"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <Condition>NOT WIX_IS_NETFRAMEWORK_461_OR_LATER_INSTALLED</Condition>
+        <File Id="net45_GAC_Datadog.Trace.MSBuild.pdb"
+              Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.MSBuild.pdb"
+              KeyPath="yes" Checksum="yes" Assembly=".net"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <Condition>NOT WIX_IS_NETFRAMEWORK_461_OR_LATER_INSTALLED</Condition>
+        <File Id="net45_GAC_Datadog.Trace.pdb"
+              Source="$(var.TracerHomeDirectory)\net45\Datadog.Trace.pdb"
               KeyPath="yes" Checksum="yes" Assembly=".net"/>
       </Component>
     </ComponentGroup>
