--- a/src/WindowsInstaller/Files.Managed.Net461.wxs
+++ b/src/WindowsInstaller/Files.Managed.Net461.wxs
@@ -11,13 +11,28 @@
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
+        <File Id="net461_Datadog.Trace.AspNet.pdb"
+              Source="$(var.TracerHomeDirectory)\net461\Datadog.Trace.AspNet.pdb"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
         <File Id="net461_Datadog.Trace.ClrProfiler.Managed.Core.dll"
               Source="$(var.TracerHomeDirectory)\net461\Datadog.Trace.ClrProfiler.Managed.Core.dll"
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
+        <File Id="net461_Datadog.Trace.ClrProfiler.Managed.Core.pdb"
+              Source="$(var.TracerHomeDirectory)\net461\Datadog.Trace.ClrProfiler.Managed.Core.pdb"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
         <File Id="net461_Datadog.Trace.ClrProfiler.Managed.dll"
               Source="$(var.TracerHomeDirectory)\net461\Datadog.Trace.ClrProfiler.Managed.dll"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <File Id="net461_Datadog.Trace.ClrProfiler.Managed.pdb"
+              Source="$(var.TracerHomeDirectory)\net461\Datadog.Trace.ClrProfiler.Managed.pdb"
               KeyPath="yes" Checksum="yes"/>
       </Component>
       <Component Win64="$(var.Win64)">
@@ -28,6 +43,16 @@
       <Component Win64="$(var.Win64)">
         <File Id="net461_Datadog.Trace.MSBuild.dll"
               Source="$(var.TracerHomeDirectory)\net461\Datadog.Trace.MSBuild.dll"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <File Id="net461_Datadog.Trace.MSBuild.pdb"
+              Source="$(var.TracerHomeDirectory)\net461\Datadog.Trace.MSBuild.pdb"
+              KeyPath="yes" Checksum="yes"/>
+      </Component>
+      <Component Win64="$(var.Win64)">
+        <File Id="net461_Datadog.Trace.pdb"
+              Source="$(var.TracerHomeDirectory)\net461\Datadog.Trace.pdb"
               KeyPath="yes" Checksum="yes"/>
       </Component>
     </ComponentGroup>
