--- a/test/test-applications/aspnet/Samples.AspNetMvc4/Views/Home/Index.cshtml
+++ b/test/test-applications/aspnet/Samples.AspNetMvc4/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<KeyValuePair<string, string>>
 @using System.Linq
-@using System.Reflection;
+@using System.Reflection
 
 @{
     ViewBag.Title = "Index";
