Little fix, adapting native proj to reference package manager

--- a/test/test-applications/security/aspnet/Samples.AspNetMvc5/Views/Home/Index.cshtml
+++ b/test/test-applications/security/aspnet/Samples.AspNetMvc5/Views/Home/Index.cshtml
@@ -48,7 +48,7 @@
 
     <div><a href="javascript:postData()">POST /data</a></div>
 
-    <div><a href="/?arg=database()">GET /?arg=database()</a></div>
+    <div>@Html.ActionLink("GET /?arg=database()", "Index", new { arg = "database()" });</div>
 
     <div><a href=""></a></div>
 
